--- a/package.json
+++ b/package.json
@@ -1,20 +1,52 @@
 {
-  "name": "reactSpinners10-7-2020",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MrEverymorning/reactSpinners10-7-2020.git"
-  },
-  "keywords": ["react", "css", "spinners"],
-  "author": "Lucas",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/MrEverymorning/reactSpinners10-7-2020/issues"
-  },
-  "homepage": "https://github.com/MrEverymorning/reactSpinners10-7-2020#readme"
+    "name": "reactSpinners10-7-2020",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "format": "prettier-eslint --write \"src/**/*.js\"",
+        "lint": "eslint '**/*/js'",
+        "lint:fix": "prettier-eslint '/c/Users/Lucas/reactSpinners10-7-2020/src/index.js' --write"
+    },
+    "prettier": {
+        "trailingComma": "es5",
+        "tabWidth": 4,
+        "semi": false,
+        "singleQuote": true
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/MrEverymorning/reactSpinners10-7-2020.git"
+    },
+    "keywords": [
+        "react",
+        "css",
+        "spinners"
+    ],
+    "author": "Lucas",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/MrEverymorning/reactSpinners10-7-2020/issues"
+    },
+    "homepage": "https://github.com/MrEverymorning/reactSpinners10-7-2020#readme",
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^4.4.0",
+        "@typescript-eslint/parser": "^4.4.0",
+        "eslint": "^7.10.0",
+        "eslint-config-prettier": "^6.12.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-react": "^7.21.3",
+        "eslint-plugin-standard": "^4.0.1",
+        "lint": "^0.7.0",
+        "prettier": "2.1.2",
+        "prettier-eslint": "^11.0.0",
+        "prettier-eslint-cli": "^5.0.0"
+    },
+    "dependencies": {
+        "glob": "^7.1.6"
+    }
 }
